# route.go
@@ -1,19 +1,17 @@
 package main
 
 import (
-	"fmt"
-
 	"./controller"
 	"./middleware"
 	"github.com/gin-gonic/gin"
 )
 
 func InitRoute(app *gin.Engine) {
-	app.GET("/", func(context *gin.Context) {
-		fmt.Println("masok!!")
-	}, controller.HomeGet, func(context *gin.Context) {
-		fmt.Println("masok 2 !!")
-	})
+	// app.GET("/", func(context *gin.Context) {
+	// 	fmt.Println("masok!!")
+	// }, controller.HomeGet, func(context *gin.Context) {
+	// 	fmt.Println("masok 2 !!")
+	// })
 
 	app.GET("/test",
 		// middleware.JwtMiddleware,
@@ -22,4 +20,5 @@ func InitRoute(app *gin.Engine) {
 	// app.POST("/", controller.HomePost)
 	app.POST("/login", controller.Login)
 	app.POST("/register", controller.Register)
+	app.GET("/customer/:email", controller.FindByEmail)
 }
